@@ -3,7 +3,6 @@ plugins {
 }
 
 group 'us.florent'
-//version '1.0-SNAPSHOT'
 version '3.5'
 
 repositories {
@@ -11,29 +10,29 @@ repositories {
 }
 
 jar {
+    duplicatesStrategy(DuplicatesStrategy.INCLUDE)
     manifest {
         attributes 'Main-Class': 'us.florent.genReef35'
     }
     from {
-        (configurations.runtime).collect {
-            it.isDirectory() ? it : zipTree(it)
-        }
+        configurations
+                .runtimeClasspath
+                .collect {
+                    it.isDirectory() ? it : zipTree(it)
+                }
     }
 }
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
+dependencies {
+    implementation 'org.mongodb:mongodb-driver-sync:4.7.1'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
+    implementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
 }
 
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-
-dependencies {
-    compile 'org.mongodb:mongodb-driver-sync:4.0.4'
-    compile group: 'javax.json', name: 'javax.json-api', version: '1.1.4'
-    compile group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
-    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
-
+test {
+    useJUnitPlatform()
 }
